Fix off by one