@@ -414,7 +414,10 @@ public class RestEsqlIT extends RestEsqlTestCase {
     public void testPushEqualityOnDefaults() throws IOException {
         indexTimestampData(1);
 
-        RequestObjectBuilder builder = requestObjectBuilder().query(fromIndex() + " | WHERE test == \"value1\"");
+        String value = "v".repeat(between(0, 256));
+        indexValue(value);
+
+        RequestObjectBuilder builder = requestObjectBuilder().query(fromIndex() + " | WHERE test == \"" + value + "\"");
         builder.profile(true);
         Map<String, Object> result = runEsql(builder);
         assertResultMap(
@@ -424,7 +427,7 @@ public class RestEsqlIT extends RestEsqlTestCase {
                 .item(matchesMap().entry("name", "test").entry("type", "text"))
                 .item(matchesMap().entry("name", "test.keyword").entry("type", "keyword"))
                 .item(matchesMap().entry("name", "value").entry("type", "long")),
-            equalTo(List.of(List.of("2020-12-12T00:00:00.000Z", "value1", "value1", 1)))
+            equalTo(List.of(Arrays.asList(null, value, value, null)))
         );
 
         @SuppressWarnings("unchecked")
@@ -437,7 +440,7 @@ public class RestEsqlIT extends RestEsqlTestCase {
             List<Map<String, Object>> operators = (List<Map<String, Object>>) p.get("operators");
             for (Map<String, Object> o : operators) {
                 // The query here is the most important bit - we *do* push to lucene.
-                sig.add(checkOperatorProfile(o, "test.keyword:value1"));
+                sig.add(checkOperatorProfile(o, "test.keyword:" + value));
             }
             String description = p.get("description").toString();
             switch (description) {
@@ -458,6 +461,73 @@ public class RestEsqlIT extends RestEsqlTestCase {
                 default -> throw new IllegalArgumentException("can't match " + description);
             }
         }
+    }
+
+    public void testPushEqualityOnDefaultsTooBigToPush() throws IOException {
+        indexTimestampData(1);
+
+        String value = "a".repeat(between(257, 1000));
+        indexValue(value);
+
+        RequestObjectBuilder builder = requestObjectBuilder().query(fromIndex() + " | WHERE test == \"" + value + "\"");
+        builder.profile(true);
+        Map<String, Object> result = runEsql(builder);
+        assertResultMap(
+            result,
+            getResultMatcher(result).entry("profile", matchesMap().entry("drivers", instanceOf(List.class))),
+            matchesList().item(matchesMap().entry("name", "@timestamp").entry("type", "date"))
+                .item(matchesMap().entry("name", "test").entry("type", "text"))
+                .item(matchesMap().entry("name", "test.keyword").entry("type", "keyword"))
+                .item(matchesMap().entry("name", "value").entry("type", "long")),
+            equalTo(List.of(Arrays.asList(null, value, null, null)))
+        );
+
+        @SuppressWarnings("unchecked")
+        List<Map<String, Object>> profiles = (List<Map<String, Object>>) ((Map<String, Object>) result.get("profile")).get("drivers");
+        for (Map<String, Object> p : profiles) {
+            fixTypesOnProfile(p);
+            assertThat(p, commonProfile());
+            List<String> sig = new ArrayList<>();
+            @SuppressWarnings("unchecked")
+            List<Map<String, Object>> operators = (List<Map<String, Object>>) p.get("operators");
+            for (Map<String, Object> o : operators) {
+                // The query here is the most important bit - we do *not* push to lucene.
+                sig.add(checkOperatorProfile(o, "*:*"));
+            }
+            String description = p.get("description").toString();
+            switch (description) {
+                case "data" -> assertMap(
+                    sig,
+                    matchesList().item("LuceneSourceOperator")
+                        .item("ValuesSourceReaderOperator")
+                        .item("FilterOperator")
+                        .item("LimitOperator")
+                        .item("ValuesSourceReaderOperator")
+                        .item("ProjectOperator")
+                        .item("ExchangeSinkOperator")
+                );
+                case "node_reduce" -> assertThat(
+                    sig,
+                    either(matchesList().item("ExchangeSourceOperator").item("ExchangeSinkOperator")).or(
+                        matchesList().item("ExchangeSourceOperator").item("AggregationOperator").item("ExchangeSinkOperator")
+                    )
+                );
+                case "final" -> assertMap(sig, matchesList().item("ExchangeSourceOperator").item("LimitOperator").item("OutputOperator"));
+                default -> throw new IllegalArgumentException("can't match " + description);
+            }
+        }
+    }
+
+    private void indexValue(String value) throws IOException {
+        Request bulk = new Request("POST", "/_bulk");
+        bulk.addParameter("filter_path", "errors");
+        bulk.addParameter("refresh", "");
+        bulk.setJsonEntity(String.format("""
+            {"create":{"_index":"%s"}}
+            {"test":"%s"}
+            """, testIndexName(), value));
+        Response response = client().performRequest(bulk);
+        Assert.assertEquals("{\"errors\":false}", EntityUtils.toString(response.getEntity(), StandardCharsets.UTF_8));
     }
 
     @SuppressWarnings("unchecked")
@@ -748,7 +818,7 @@ public class RestEsqlIT extends RestEsqlTestCase {
             case "ExchangeSourceOperator" -> matchesMap().entry("pages_waiting", 0)
                 .entry("pages_emitted", greaterThan(0))
                 .entry("rows_emitted", greaterThan(0));
-            case "ProjectOperator", "EvalOperator" -> basicProfile();
+            case "ProjectOperator", "EvalOperator", "FilterOperator" -> basicProfile();
             case "LimitOperator" -> matchesMap().entry("pages_processed", greaterThan(0))
                 .entry("limit", 1000)
                 .entry("limit_remaining", 999)
